--- a/ingress.html
+++ b/ingress.html
@@ -1,22 +1,26 @@
 <html>
 	<head>
 		<title>Ingress Distance/Time To Action</title>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script type="text/javascript">
 		Number.prototype.toRad = function() {
 			return this * Math.PI / 180;
 		}
 
-		var x = document.getElementById("current-location");
-		function getLocation() {
-			if (navigator.geolocation) {
+		var currentIndex = 0;
+
+		function getLocation(index) {
+			if (index && navigator.geolocation) {
+				currentIndex = index;
 				navigator.geolocation.getCurrentPosition(showPosition);
 			} else {
-				x.innerHTML = "Geolocation is not supported by your browser";
+				document.getElementById("message").innerHTML = "Geolocation is not supported by your browser";
 			}
 		}
 
 		function showPosition(position) {
-			x.innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude;
+			var x = document.getElementById();
+			x.innerHTML = "Location: " + position.coords.latitude + ", " + position.coords.longitude;
 		}
 
 		function calculateDistance(pos1, pos2) {
@@ -30,33 +34,35 @@
 			var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a)); 
 			return R * c;
 		}
-		
+
 		getLocation();
 		</script>
 
 	</head>
 	<body>
-			<div>
-				<h1>Location 1</h1>
-				<input type="button">
-				<div id="location1">
-					Location: <br>
-					Timestamp:
-				</div>
+		<h1>Ingress Tools: Location/Time to Action</h1>
+		<div id="message"></div>
+		<div>
+			<h2>Location 1</h2>
+			<input type="button" id="btn-location1" onClick="javascript:getLocation(1)">
+			<div id="location1">
+				<div id="location1-coordinates" class="coordinates">Location:<span></span></div>
+				<div id="location1-timestamp" class="timestamp">Timestamp:<span></span></div>
 			</div>
-			<div>
-				<h1>Location 2</h1>
-				<input type="button">
-				<div id="location2">
-					Location: <br>
-					Timestamp:
-				</div>
+		</div>
+		<div>
+			<h2>Location 2</h2>
+			<input type="button" id="btn-location1" onClick="javascript:getLocation(2)">
+			<div id="location2">
+				<div id="location2-coordinates" class="coordinates">Location:<span></span></div>
+				<div id="location2-timestamp" class="timestamp">Timestamp:<span></span></div>
 			</div>
-			<div>
-				Speed
-			</div>
-			<div>
-				Calculate Time to 
-			</div>
+		</div>
+		<div>
+			<h2>Speed</h2>
+		</div>
+		<div>
+			<h2>Calculate Time to Action</h2>
+		</div>
 	</body>
 </html>
