--- a/ingress.html
+++ b/ingress.html
@@ -42,7 +42,7 @@
 			var lat1 = pos1.coords.latitude.toRad();
 			var lat2 = pos2.coords.latitude.toRad();
 
-			var a = Math.sin(dLat/2) * Math.sin(dLat/2) + Math.sin(dLon/2) * Math.sin(dLon/2) * Math.cos(lat1) * Math.cos(lat2); 
+			var a = Math.sin(dLat/2) * Math.sin(dLat/2) + Math.sin(dLng/2) * Math.sin(dLng/2) * Math.cos(lat1) * Math.cos(lat2); 
 			var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a)); 
 			return R * c;
 		}
