--- a/ingress.html
+++ b/ingress.html
@@ -3,7 +3,7 @@
 		<title>Distance/Time To Action</title>
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
-		<link type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+		<link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 		<script type="text/javascript">
 		Number.prototype.toRad = function() {
 			return this * Math.PI / 180;
