--- a/ingress.html
+++ b/ingress.html
@@ -54,13 +54,12 @@
 
 		function calculate() {
 			var distance = calculateDistance(locations[1][0], locations[2][0]);
-			$("#time-to-action #distance")[0].innerHTML = distance;
+			$("#time-to-action #distance span")[0].innerHTML = distance + "KM";
 
 			var ts1 = locations[1][1];
 			var ts2 = locations[2][1];
 
-			//var timeDiff = calculateTime(, locations[2][1]);
-			$("#time-to-action #estimated-time")[0].innerHTML = ts2.from(ts1);
+			$("#time-to-action #estimated-time span")[0].innerHTML = ts1.diff(ts2) / 1000 + "(" + ts2.from(ts1, true) + ")";
 		}
 
 
@@ -69,8 +68,12 @@
 		</script>
 
 		<style type="text/css">
-		#container {
-			width:750px;
+		#container {			
+			margin: 0 auto;
+		}
+		button, select {
+			font-size: 1.8em;
+			padding: 10px 35px;
 		}
 		</style>
 	</head>
@@ -108,7 +111,7 @@
 				<h2>Time to Action</h2>
 				<button type="button" id="calculate-time" onClick="javascript:calculate()">Calculate</button>
 				<div id="time-to-action">
-					<div id="distance"></div>
+					<div id="distance">Distance: <span></span></div>
 					<div id="estimated-time"></div>
 				</div>
 			</div>
