--- a/ingress.html
+++ b/ingress.html
@@ -112,7 +112,7 @@
 				<button type="button" id="calculate-time" onClick="javascript:calculate()">Calculate</button>
 				<div id="time-to-action">
 					<div id="distance">Distance: <span></span></div>
-					<div id="estimated-time"></div>
+					<div id="estimated-time">Estimated Time to Destination: <span></span></div>
 				</div>
 			</div>
 		</div>
