--- a/ingress.html
+++ b/ingress.html
@@ -56,10 +56,15 @@
 			var distance = calculateDistance(locations[1][0], locations[2][0]);
 			$("#time-to-action #distance span")[0].innerHTML = Math.ceil(distance) + " KM (" + distance + ")";
 
-			var ts1 = locations[1][1];
-			var ts2 = locations[2][1];
+			var originTime = locations[1][1];
+			//ts2 is irrelevant
+			var speed = $("#speed")[0].value;
+			var timeNeeded = distance / speed * 60 * 60 * 1000; // in miliseconds
+			var destination = originTime;
+			destination.add('ms', timeNeeded);
 
-			$("#time-to-action #estimated-time span")[0].innerHTML = Math.ceil(ts2.diff(ts1) / 1000) + " seconds (" + ts2.from(ts1, true) + ")";
+			// formula : ts1 + actual time needed to go the distance at 60kmph
+			$("#time-to-action #estimated-time span")[0].innerHTML = destination.format() + " (" + destination.from(originTime, true) + ")";
 		}
 
 
