--- a/ingress.html
+++ b/ingress.html
@@ -15,7 +15,7 @@
 
 		function postDebugMessage(msg) {
 			debugMsgIdx++;
-			document.getElementById("debug-message").innerHTML += "<br>" + num + ": " + msg;
+			document.getElementById("debug-message").innerHTML += "<br>" + debugMsgIdx + ": " + msg;
 		}
 
 		function getLocation(index) {
