better debugging msgs

--- a/ingress.html
+++ b/ingress.html
@@ -71,6 +71,8 @@
 			" (" + destination.from(originTime) + ")";
 
 			postDebugMessage("time diff in ms: " + destination.diff(originTime));
+                        postDebugMessage("origin: " + originTime.format());
+                        postDebugMessage("destination: " + destination.format();
 		}
 
 
