--- a/ingress.html
+++ b/ingress.html
@@ -72,7 +72,7 @@
 
 			postDebugMessage("time diff in ms: " + destination.diff(originTime));
                         postDebugMessage("origin: " + originTime.format());
-                        postDebugMessage("destination: " + destination.format();
+                        postDebugMessage("destination: " + destination.format());
 		}
 
 
