debug msg for timeneeded

--- a/ingress.html
+++ b/ingress.html
@@ -73,6 +73,7 @@
 			postDebugMessage("time diff in ms: " + destination.diff(originTime));
                         postDebugMessage("origin: " + originTime.format());
                         postDebugMessage("destination: " + destination.format());
+                        postDebugMessage("timeneeded: " + timeNeeded);
 		}
 
 
