--- a/ingress.html
+++ b/ingress.html
@@ -64,7 +64,7 @@
 			// formula : ts1 + actual time needed to go the distance at xx kmph
 			var originTime = locations[1][1];
 			var speed = $("#speed")[0].value;
-			var timeNeeded = distance / speed * 60 * 60 * 1000; // in miliseconds
+			var timeNeeded = Math.ceil(distance / speed * 60 * 60 * 1000); // in miliseconds
 			var destination = originTime;
 			destination.add('ms', timeNeeded);
 			$("#time-to-action #estimated-time span")[0].innerHTML = destination.format('DD MMMM YYYY, HH:mm:ss') + 
