--- a/ingress.html
+++ b/ingress.html
@@ -120,7 +120,7 @@
 		</div>
 
 		<div class="row">
-			<div class="small-6 columns">
+			<div class="small-12 large-6 columns">
 				<h2>Origin</h2>
 				<button type="button" class="button expand radius" id="btn-location1" onClick="javascript:getLocation(1)">Get Location</button>
 				<dl id="location1">
@@ -128,7 +128,7 @@
 					<div id="location1-timestamp" class="timestamp">Timestamp: <span></span></div>
 				</dl>
 			</div>
-			<div class="small-6 columns">
+			<div class="small-12 large-6 columns">
 				<h2>Destination</h2>
 				<button type="button" class="button expand radius" id="btn-location2" onClick="javascript:getLocation(2)">Get Location</button>
 				<dl id="location2">
@@ -139,7 +139,7 @@
 		</div>
 
 		<div class="row">
-			<div class="small-6 columns">
+			<div class="small-12 large-6 columns">
 				<h2>Speed (KM)</h2>
 				<p>Select speed: </p>
 				<select id="speed">
@@ -151,7 +151,7 @@
 				</select>
 			</div>
 
-			<div class="small-6 columns">
+			<div class="small-12 large-6 columns">
 				<h2>Time to Action</h2>
 				<div class="button-bar">
 					<ul class="button-group radius">
