--- a/ingress.html
+++ b/ingress.html
@@ -155,18 +155,18 @@
 				<h2>Time to Action</h2>
 				<div class="button-bar">
 					<ul class="button-group radius">
-						<li><a href="#" class="button" onClick="javascript:calculate()">Calculate</a></li>
+						<li><a href="#time-to-action" class="button" onClick="javascript:calculate()">Calculate</a></li>
 						<li><a href="#" class="button alert" onClick="javascript:reset();">Reset</a></li>
 					</ul>
 				</div>
 				<div id="time-to-action">
 					<dl id="distance">
 						<dt>Distance: </dt>
-						<dd>0KM</dd>
+						<span>0KM</span>
 					</dl>
 					<dl id="estimated-time">
 						<dt>Estimated arrival to Destination: </dt>
-						<dd>N/A</dd>
+						<span>N/A</span>
 					</dl>
 				</div>
 			</div>
