--- a/ingress.html
+++ b/ingress.html
@@ -18,7 +18,7 @@
 
 		function postDebugMessage(msg) {
 			debugMsgIdx++;
-			document.getElementById("debug-message").innerHTML += "<br>" + debugMsgIdx + ": " + msg;
+			document.getElementById("debug-message").innerHTML += "<h4><small>" + debugMsgIdx + ": " + msg + "</small></h4>";
 		}
 
 		function getLocation(index) {
