--- a/ingress.html
+++ b/ingress.html
@@ -76,12 +76,12 @@
 			var arrivalTime = moment(originTime); //clone moment obj
 			arrivalTime.add("ms", timeNeeded);
 			$("#time-to-action #estimated-time span")[0].innerHTML = arrivalTime.format('DD MMMM YYYY, HH:mm:ss') + 
-			" (" + arrivalTime.from(moment(), 'minutes') + ")";
+			" (" + arrivalTime.from(moment()) + " (" + arrivalTime.diff(moment(), 'minutes') + "))";
 
 			postDebugMessage("time diff in ms: " + arrivalTime.diff(originTime));
 			postDebugMessage("origin: " + originTime.format());
 			postDebugMessage("arrivalTime: " + arrivalTime.format());
-			postDebugMessage("timeneeded: " + timeNeeded);
+			postDebugMessage("timeneeded: " + timeNeeded + "ms");
 		}
 
 		function reset() {
@@ -127,7 +127,7 @@
 		<div class="row">
 			<div class="small-12 large-6 columns">
 				<h2>Origin</h2>
-				<button type="button" class="button expand radius" id="btn-location1" onClick="javascript:getLocation(1)">Get Location</button>
+				<button type="button" class="button expand radius" id="btn-location1" onClick="javascript:getLocation(1)">Get Current Location</button>
 				<dl id="location1">
 					<div id="location1-coordinates" class="coordinates">Location: <span></span></div>
 					<div id="location1-timestamp" class="timestamp">Timestamp: <span></span></div>
@@ -135,7 +135,7 @@
 			</div>
 			<div class="small-12 large-6 columns">
 				<h2>Destination</h2>
-				<button type="button" class="button expand radius" id="btn-location2" onClick="javascript:getLocation(2)">Get Location</button>
+				<button type="button" class="button expand radius" id="btn-location2" onClick="javascript:getLocation(2)">Get Current Location</button>
 				<dl id="location2">
 					<div id="location2-coordinates" class="coordinates">Location: <span></span></div>
 					<div id="location2-timestamp" class="timestamp">Timestamp: <span></span></div>
