--- a/ingress.html
+++ b/ingress.html
@@ -99,86 +99,90 @@
 		</script>
 	</head>
 	<body>
-		<nav class="top-bar" data-topbar>
-			<ul class="title-area">
-				<li class="name">
-					<h1><a href="#">Location/Time to Action</a></h1>
-				</li>
-			</ul>
-
-			<section class="top-bar-section">
-				<!-- Right Nav Section -->
-				<ul class="right">
-				</ul>
-
-				<!-- Left Nav Section -->
-				<ul class="left">
-				</ul>
-			</section>
-		</nav>
-
-		<br />
-		<div id="message-container" class="row hide">
-			<div id="message" data-alert class="alert-box alert hide">
-				<a href="#" class="close">&times;</a>
-			</div>
-		</div>
-
 		<div class="row">
-			<div class="small-12 large-6 columns">
-				<h2>Origin</h2>
-				<button type="button" class="button expand radius" id="btn-location1" onClick="javascript:getLocation(1)">Get Current Location</button>
-				<dl id="location1">
-					<div id="location1-coordinates" class="coordinates">Location: <span></span></div>
-					<div id="location1-timestamp" class="timestamp">Timestamp: <span></span></div>
-				</dl>
-			</div>
-			<div class="small-12 large-6 columns">
-				<h2>Destination</h2>
-				<button type="button" class="button expand radius" id="btn-location2" onClick="javascript:getLocation(2)">Get Current Location</button>
-				<dl id="location2">
-					<div id="location2-coordinates" class="coordinates">Location: <span></span></div>
-					<div id="location2-timestamp" class="timestamp">Timestamp: <span></span></div>
-				</dl>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="small-12 large-6 columns">
-				<h2>Speed (KM)</h2>
-				<p>Select speed: </p>
-				<select id="speed">
-					<option value="20">20KM/h</option>
-					<option value="40">40KM/h</option>
-					<option value="60" selected>60KM/h</option>
-					<option value="80">80KM/h</option>
-					<option value="100">100KM/h</option>
-				</select>
-			</div>
-
-			<div class="small-12 large-6 columns">
-				<h2>Time to Action</h2>
-				<div class="button-bar">
-					<ul class="button-group radius">
-						<li><a href="#time-to-action" class="button" onClick="javascript:calculate()">Calculate</a></li>
-						<li><a href="#" class="button alert" onClick="javascript:reset();">Reset</a></li>
+			<div class="large-12 columns">
+				<nav class="top-bar" data-topbar>
+					<ul class="title-area">
+						<li class="name">
+							<h1><a href="#">Location/Time to Action</a></h1>
+						</li>
 					</ul>
+
+					<section class="top-bar-section">
+						<!-- Right Nav Section -->
+						<ul class="right">
+						</ul>
+
+						<!-- Left Nav Section -->
+						<ul class="left">
+						</ul>
+					</section>
+				</nav>
+
+				<br />
+				<div id="message-container" class="row hide">
+					<div id="message" data-alert class="alert-box alert hide">
+						<a href="#" class="close">&times;</a>
+					</div>
 				</div>
-				<div id="time-to-action">
-					<dl id="distance">
-						<dt>Distance: </dt>
-						<span>0KM</span>
-					</dl>
-					<dl id="estimated-time">
-						<dt>Estimated arrival to destination: </dt>
-						<span>N/A</span>
-					</dl>
+
+				<div class="row">
+					<div class="small-12 large-6 columns">
+						<h2>Origin</h2>
+						<button type="button" class="button expand radius" id="btn-location1" onClick="javascript:getLocation(1)">Get Current Location</button>
+						<dl id="location1">
+							<div id="location1-coordinates" class="coordinates">Location: <span></span></div>
+							<div id="location1-timestamp" class="timestamp">Timestamp: <span></span></div>
+						</dl>
+					</div>
+					<div class="small-12 large-6 columns">
+						<h2>Destination</h2>
+						<button type="button" class="button expand radius" id="btn-location2" onClick="javascript:getLocation(2)">Get Current Location</button>
+						<dl id="location2">
+							<div id="location2-coordinates" class="coordinates">Location: <span></span></div>
+							<div id="location2-timestamp" class="timestamp">Timestamp: <span></span></div>
+						</dl>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="small-12 large-6 columns">
+						<h2>Speed (KM)</h2>
+						<p>Select speed: </p>
+						<select id="speed">
+							<option value="20">20KM/h</option>
+							<option value="40">40KM/h</option>
+							<option value="60" selected>60KM/h</option>
+							<option value="80">80KM/h</option>
+							<option value="100">100KM/h</option>
+						</select>
+					</div>
+
+					<div class="small-12 large-6 columns">
+						<h2>Time to Action</h2>
+						<div class="button-bar">
+							<ul class="button-group radius">
+								<li><a href="#time-to-action" class="button" onClick="javascript:calculate()">Calculate</a></li>
+								<li><a href="#" class="button alert" onClick="javascript:reset();">Reset</a></li>
+							</ul>
+						</div>
+						<div id="time-to-action">
+							<dl id="distance">
+								<dt>Distance: </dt>
+								<span>0KM</span>
+							</dl>
+							<dl id="estimated-time">
+								<dt>Estimated arrival to destination: </dt>
+								<span>N/A</span>
+							</dl>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div id="debug-message"></div>  
 				</div>
 			</div>
-		</div>
-
-		<div class="row">
-			<div id="debug-message"></div>  
 		</div>
 	</body>
 </html>
